@@ -4,6 +4,7 @@ Bug fixes:
 
 * [SF #1767529] IOError exception using CHM dump option
 * [SF #1955872] import error
+* [SF #1805070] TOC is broken after decompilation
 
 arCHMage 0.1.9
 ==============
